Add icon selection and admin updates

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,9 @@
     
     <main class="container">
         <div class="links-wrapper">
+            <div id="profile-container" class="profile-container">
+                <!-- Profile info will be dynamically inserted here -->
+            </div>
             <div id="links-container" class="links-container" role="list">
                 <!-- Links will be dynamically inserted here -->
             </div>
